# Pryvid

./: .gitignore  Cargo.toml  README.md  dev.quark97.Pryvid.json  meson.build
data/: dev.quark97.Pryvid.appdata.xml.in  dev.quark97.Pryvid.desktop.in  dev.quark97.Pryvid.gschema.xml  meson.build  resources.gresource.xml
data/icons/: meson.build  resources.gresource.xml
po/: POTFILES  meson.build
src/: application.rs  appmodel.rs  config.rs  config.rs.in  main.rs  meson.build  pryvid.gresource.xml  style.css  ui.gresource.xml  utils.rs
src/api/: mod.rs
src/widgets/: mod.rs
src/widgets/async_image/: mod.blp  mod.rs
src/widgets/channel_button/: mod.blp  mod.rs
src/widgets/channel_info_window/: mod.blp  mod.rs
src/widgets/channel_view/: mod.blp  mod.rs
src/widgets/content_grid/: mod.blp  mod.rs
src/widgets/curation_instance_row/: mod.rs
src/widgets/curation_window/: mod.blp  mod.rs
src/widgets/instance_indicator/: mod.blp  mod.rs
src/widgets/instance_row/: mod.rs
src/widgets/instancerow/: mod.rs
src/widgets/loading_window/: mod.blp  mod.rs
src/widgets/new_instance_window/: mod.blp  mod.rs  new_instance_window.blp
src/widgets/onboarding/: mod.rs  onboarding.blp
src/widgets/playlist_button/: mod.blp  mod.rs
src/widgets/playlist_view/: mod.blp  mod.rs
src/widgets/preferences/: mod.blp  mod.rs  preferences.blp
src/widgets/result_page/: mod.blp  mod.rs
src/widgets/video_button/: mod.blp  mod.rs
src/widgets/video_view/: mod.blp  mod.rs
src/widgets/window/: mod.blp  mod.rs  window.blp
