[package]
name = "pryvid"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.6.6", package = "gtk4", features = ["v4_10"] }
lazy_static = "1.4.0"
once_cell = "1.18.0"
rand = "0.8.5"
regex = "1.9.1"
serde = { version = "1.0.171", features = ["derive", "rc"] }
serde_json = "1.0.102"
thiserror = "1.0.43"
ureq = { version = "2.7.1", features = ["json"] }

[dependencies.adw]
package = "libadwaita"
version = "0.4.4"
features = ["v1_4"]
