[package]
name = "pryvid"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7.1", package = "gtk4", features = ["v4_10"] }
isahc = { version = "1.7.2", features = ["json"] }
lazy_static = "1.4.0"
once_cell = "1.18.0"
rand = "0.8.5"
regex = "1.9.1"
serde = { version = "1.0.171", features = ["derive", "rc"] }
serde_json = "1.0.102"
thiserror = "1.0.43"

[dependencies.adw]
package = "libadwaita"
version = "0.5.2"
features = ["v1_4"]
